--- a/src/styles/components/_asset-detail-modal.scss
+++ b/src/styles/components/_asset-detail-modal.scss
@@ -77,7 +77,7 @@
 
         span {
           display: flex;
-          justify-content: end;
+          justify-content: space-between;
           gap: 0.2rem;
           align-items: center;
           width: 100%;
@@ -86,6 +86,11 @@
             &:last-child {
               color: var(--color-secondary);
             }
+          }
+
+          .last-price {
+            display: flex;
+            gap: 0.1rem;
           }
         }
       }
