--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,26 @@
   padding: 0;
 }
 
+// /* width */
+// ::-webkit-scrollbar {
+//   width: 10px;
+// }
+
+// /* Track */
+// ::-webkit-scrollbar-track {
+//   background: #f1f1f1;
+// }
+
+// /* Handle */
+// ::-webkit-scrollbar-thumb {
+//   background: #888;
+// }
+
+// /* Handle on hover */
+// ::-webkit-scrollbar-thumb:hover {
+//   background: #555;
+// }
+
 body {
   width: 100vw;
   overflow-x: hidden !important;
