--- a/src/styles/pages/collection/_collection-assets.scss
+++ b/src/styles/pages/collection/_collection-assets.scss
@@ -49,6 +49,13 @@
         }
       }
     }
+    .total-results {
+      padding: 0.5rem 0;
+      padding-left: 1.4rem;
+      small {
+        color: var(--color-secondary);
+      }
+    }
     .assets-actual-filters {
       width: 100%;
       display: flex;
@@ -65,6 +72,7 @@
         margin: 0.5rem;
         display: flex;
         align-items: center;
+        margin-left: 0;
 
         &:hover {
           color: var(--color-secondary-hover);
