--- a/src/styles/components/_asset-detail-modal.scss
+++ b/src/styles/components/_asset-detail-modal.scss
@@ -58,6 +58,10 @@
         align-items: center;
         color: var(--color-primary);
       }
+
+      audio {
+        width: 100%;
+      }
     }
     .asset-detail-info {
       display: flex;
@@ -77,7 +81,6 @@
 
         span {
           display: flex;
-          justify-content: space-between;
           gap: 0.2rem;
           align-items: center;
           width: 100%;
