--- a/src/styles/components/_range.scss
+++ b/src/styles/components/_range.scss
@@ -3,6 +3,26 @@
   margin: 1rem auto;
 }
 
+.range-select-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 10px 0;
+  .range-select {
+    width: 100%;
+    height: 40px;
+    margin: 0 auto;
+    padding: 0.1rem;
+    border-radius: 9px;
+    border: 1px solid var(--border-default);
+    color: var(--color-secondary);
+    background-color: var(--bg-search-input);
+    &:focus-within {
+      outline: none;
+    }
+  }
+}
+
 .range-number-inputs {
   display: flex;
   gap: 0.2rem;
