--- a/src/styles/pages/collection/_collection-assets.scss
+++ b/src/styles/pages/collection/_collection-assets.scss
@@ -17,7 +17,7 @@
       margin: 1rem 0;
 
       .assets-sort {
-        width: 60%;
+        width: 100%;
         display: flex;
         align-items: center;
         padding-left: 1.4rem;
@@ -33,6 +33,7 @@
         select {
           width: 250px;
           padding: 0.5rem;
+          max-height: 39px;
           border-radius: 9px;
           margin-right: 1rem;
           border: 1px solid var(--border-default);
