WG-160 in search bar collections shown instead of individual assets

--- a/src/styles/pages/Search/index.scss
+++ b/src/styles/pages/Search/index.scss
@@ -31,7 +31,7 @@
     }
   }
 
-  .search-filters {
+  .full-search-filters {
     display: flex;
     align-items: center;
     border: none;
@@ -234,7 +234,7 @@
       }
     }
 
-    .search-filters {
+    .full-search-filters {
       ul {
         .active {
         }
@@ -313,7 +313,7 @@
       }
     }
 
-    .search-filters {
+    .full-search-filters {
       ul {
         .active {
         }
