--- a/src/styles/components/_asset-detail-modal.scss
+++ b/src/styles/components/_asset-detail-modal.scss
@@ -262,6 +262,22 @@
     align-items: center;
     color: var(--color-secondary);
   }
+
+  .traits-prices {
+    display: flex;
+    color: #666666;
+    text-align: end;
+    display: flex;
+    flex-direction: column;
+    small {
+      text-align: end;
+      display: flex;
+      flex-direction: column;
+      span {
+        color: var(--color-secondary);
+      }
+    }
+  }
 }
 
 // @media screen and (max-width: 1200px) {
