WG-158 custom styles

--- a/src/styles/components/_asset-detail-modal.scss
+++ b/src/styles/components/_asset-detail-modal.scss
@@ -269,10 +269,9 @@
     text-align: end;
     display: flex;
     flex-direction: column;
+    font-size: x-small;
     small {
       text-align: end;
-      display: flex;
-      flex-direction: column;
       span {
         color: var(--color-secondary);
       }
