WG-210 add traits filter count for mobile

--- a/src/styles/pages/collection/_collection-assets.scss
+++ b/src/styles/pages/collection/_collection-assets.scss
@@ -228,8 +228,10 @@
       cursor: pointer;
       p {
         font-size: 25px;
-
         margin: 0;
+      }
+      span {
+        font-size: smaller;
       }
     }
 
