WG-201 add styles for terms and privacy

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,3 +6,4 @@
 @use './pages/Search/index.scss' as search;
 @use './pages/getListed/Index.scss' as getListed;
 @use './pages/Error404/Index.scss' as Error404;
+@use './pages/terms/Index.scss' as terms;
