--- a/src/styles/components/_asset-detail-modal.scss
+++ b/src/styles/components/_asset-detail-modal.scss
@@ -94,6 +94,7 @@
           gap: 0.2rem;
           align-items: center;
           width: 100%;
+          justify-content: space-between;
           color: #666666;
           small {
             &:last-child {
