--- a/src/styles/components/_collection-asset-card.scss
+++ b/src/styles/components/_collection-asset-card.scss
@@ -118,6 +118,7 @@ a {
           display: flex;
           gap: 0.2rem;
           align-items: center;
+          justify-content: space-between;
           width: 100%;
           small {
             &:last-child {
