--- a/src/styles/pages/collection/_collection-assets.scss
+++ b/src/styles/pages/collection/_collection-assets.scss
@@ -227,8 +227,8 @@
       user-select: none;
       cursor: pointer;
       p {
-        font-size: 25px;
-        padding: 0.5rem;
+        font-size: 12px;
+        margin: 0;
       }
       .filter-counter {
         font-size: x-small;
@@ -236,7 +236,7 @@
         justify-content: end;
         align-content: flex-end;
         span {
-          margin: 5px;
+          margin: 2px 5px 0 5px;
         }
       }
     }
@@ -364,12 +364,12 @@
         user-select: none;
         cursor: pointer;
         p {
-          font-size: 25px;
+          font-size: 15px;
           margin: 0;
         }
         span {
           font-size: x-small;
-          margin: 5px;
+          margin: 0 5px;
         }
       }
 
