--- a/src/styles/pages/collection/_collection-assets.scss
+++ b/src/styles/pages/collection/_collection-assets.scss
@@ -13,7 +13,6 @@
 
     .assets-header {
       width: 100%;
-
       margin: 1rem 0;
 
       .assets-sort {
@@ -47,6 +46,48 @@
 
         .sort-direction {
           color: var(--color-secondary);
+        }
+      }
+
+      .asset-search-input {
+        width: 600px;
+        display: flex;
+        align-items: center;
+        padding-left: 1.4rem;
+        color: $secondary-color;
+        background-color: var(--bg-search-input);
+        padding: 0.3rem;
+        border-radius: 1.4rem;
+        border: 1px solid var(--border-default);
+        margin: 20px 10px;
+        cursor: text;
+        justify-content: space-between;
+
+        svg {
+          cursor: pointer;
+        }
+        .input {
+          width: 100%;
+          display: flex;
+          align-items: center;
+          svg {
+            color: var(--color-secondary);
+            margin-right: 5px;
+          }
+          input {
+            width: 100%;
+            color: var(--color-secondary);
+            border: none;
+            background: none;
+
+            &::placeholder {
+              color: #aaaaaa;
+            }
+
+            &:focus-within {
+              outline: none;
+            }
+          }
         }
       }
     }
@@ -314,6 +355,11 @@
 
         .assets-sort {
           width: 100%;
+          justify-content: center;
+        }
+
+        .asset-search-input {
+          width: 95%;
           justify-content: center;
         }
 
