--- a/src/styles/pages/collection/_collection-assets.scss
+++ b/src/styles/pages/collection/_collection-assets.scss
@@ -50,16 +50,16 @@
       }
 
       .asset-search-input {
-        width: 600px;
+        padding: 0.3rem;
+        width: 580px;
         display: flex;
         align-items: center;
         padding-left: 1.4rem;
         color: $secondary-color;
         background-color: var(--bg-search-input);
-        padding: 0.3rem;
         border-radius: 1.4rem;
         border: 1px solid var(--border-default);
-        margin: 20px 10px;
+        margin: 10px 1.4rem;
         cursor: text;
         justify-content: space-between;
 
@@ -359,8 +359,9 @@
         }
 
         .asset-search-input {
-          width: 95%;
+          width: calc(100% - 2.8rem);
           justify-content: center;
+          margin-right: 1.4rem;
         }
 
         .assets-pagination {
