--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @use './index.scss';
 @use './admin.scss';
 @use './components/index.scss' as components;
+@use './organisms/index.scss' as organisms;
 @use './pages/home/index.scss' as home;
 @use './pages/collection/index.scss' as collectionDetails;
 @use './pages/Search/index.scss' as search;
