WG-255 implement component on AssetDetail

--- a/src/styles/components/_asset-detail-modal.scss
+++ b/src/styles/components/_asset-detail-modal.scss
@@ -278,6 +278,12 @@
       }
     }
   }
+
+  .buy-now {
+    .btn-buy-now {
+      color: (--color-secondary);
+    }
+  }
 }
 
 // @media screen and (max-width: 1200px) {
