--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -3,6 +3,7 @@
 
 @use './dark-primary-btn';
 @use './light-primary-btn';
+@use './buy-now-btn';
 
 @use './flagship-card';
 @use './top-collections-card';
