--- a/src/styles/components/_asset-detail-modal.scss
+++ b/src/styles/components/_asset-detail-modal.scss
@@ -245,6 +245,12 @@
                 color: var(--color-secondary);
               }
             }
+            .asset-detail-filter-icon {
+              color: var(--color-secondary);
+              display: flex;
+              margin: 0 3px 0 auto;
+              justify-content: end;
+            }
           }
 
           .checked {
