--- a/src/styles/components/_wallet-modal.scss
+++ b/src/styles/components/_wallet-modal.scss
@@ -162,6 +162,72 @@
       }
     }
   }
+
+  .widget-mode {
+    width: 100%;
+    max-width: 600px;
+    min-height: 450px;
+    margin-left: auto;
+    margin-right:auto;
+
+
+    .wallet-modal {
+
+      &__header {
+        padding: 0.8rem;
+        text-align: center;
+      }  
+
+      &__body {
+        border-radius: 0.4rem;
+        border: 1px solid var(--border-default);
+
+        &__options {
+          display: flex;
+          flex-direction: column;
+          grid-template-columns: none;
+          gap: 10px;
+          .option {
+            padding: 10px;
+            display: block;
+            gap: 10px;
+            // background: #4f566f;
+            text-align: start;
+            
+            
+            img {
+              width: 20px;
+              height: 20px;
+            }
+    
+            &:hover {
+            }
+    
+            .option-container {
+              display: flex;
+              align-items: center;
+              gap: 10px;
+              padding-left: 5px;
+            }
+          }
+        }
+
+        &__info {
+          
+          margin: 10px;
+          margin-bottom: 14px;
+          p {
+            width: 100%;
+            color: var(--text-muted-color);
+          }
+        }
+  
+
+      }
+
+    }
+
+  }
   
   @media screen and (max-width: 510px) {
     .wallet-modal {
@@ -189,6 +255,12 @@
           }
         }
       }
+    }
+
+    .widget-mode {
+      width: 100%;
+      max-width: 450px;
+      min-height: 350px;
     }
   }
   
