WG-257: Refactored api.assets.find to receive optional parameters and accept ownerAddress. Changed MyNFTs component to AssetsList for future use

--- a/src/styles/components/_profile-menu.scss
+++ b/src/styles/components/_profile-menu.scss
@@ -10,4 +10,15 @@
     .Mui-selected, .PrivateTabIndicator-colorPrimary-2 {
         color: var(--color-primary) !important;
     }   
+
+    .MuiPaper-root {
+        background-color: transparent !important;
+        border: 1px solid var(--border-default) !important;
+        box-shadow: transparent !important;
+        border-radius: 0.25rem;
+    }
+
+    .MuiTab-textColorPrimary {
+        color: var(--color-secondary);
+    }
 }
