--- a/src/styles/components/_buy-now-btn.scss
+++ b/src/styles/components/_buy-now-btn.scss
@@ -19,3 +19,154 @@
 .buy-now-message {
   color: var(--color-secondary);
 }
+
+.buy-now-modal-body {
+  background-color: var(--bg-header);
+  border: 5px solid var(--border-asset-detail);
+  display: flex;
+  font-family: $default-font;
+  // gap: 1rem;
+  // flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  .buy-now-modal-info {
+    max-width: 550px;
+    background-color: var(--bg-canvas-default);
+    padding: 0.5rem;
+    color: var(--color-secondary);
+
+    .buy-now-modal-info-header {
+      padding: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: var(--color-primary);
+      font-weight: 600;
+      font-size: 24px;
+      .buy-now-back-btn {
+        cursor: pointer;
+        display: flex;
+        align-self: start;
+      }
+      h4 {
+        display: flex;
+        justify-content: center;
+      }
+    }
+
+    .buy-now-info {
+      display: flex;
+      justify-content: center;
+      padding: 0.4rem;
+      color: #666666;
+    }
+
+    .buy-now-content {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      gap: 0.5rem;
+      .buy-now-details {
+        display: flex;
+        flex-direction: row;
+        background-color: var(--bg-canvas-default);
+        border: 1px solid;
+        border-color: var(--border-default);
+        border-radius: 5px;
+        padding: 0.5rem 1rem;
+        font-weight: 700;
+        span {
+          color: var(--color-secondary);
+          width: 50%;
+        }
+        small {
+          color: var(--color-secondary);
+          width: 50%;
+          font-size: small;
+          a {
+            color: var(--color-primary);
+          }
+          .social-link {
+            margin: 0 10px 0 0;
+          }
+        }
+      }
+      .buy-now-check {
+        border-bottom: 1px solid;
+        border-color: var(--border-default);
+        border-radius: 5px;
+        text-align: center;
+        padding: 0.3rem 0;
+        font-weight: 700;
+        span {
+          color: var(--color-secondary);
+          text-align: end;
+        }
+      }
+    }
+  }
+
+  .checkout-content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    color: var(--color-secondary);
+    .checkout-detail {
+      display: flex;
+      flex-direction: row;
+      background-color: var(--bg-canvas-default);
+      border: 1px solid;
+      border-color: var(--border-default);
+      border-radius: 5px;
+      padding: 0.5rem 1rem;
+      font-weight: 700;
+      .checkout-img {
+        object-fit: cover;
+        width: 100px;
+        height: 100px;
+        border-radius: 2px;
+        margin-right: 0.7rem;
+      }
+      .checkout-info {
+        display: flex;
+        flex-direction: column;
+
+        span {
+          font-size: 12px;
+          color: var(--color-primary);
+          display: flex;
+          align-items: center;
+          margin: 0;
+        }
+
+        p {
+          font-size: 10px;
+          color: var(--color-secondary);
+          display: flex;
+          align-items: center;
+          margin: 0;
+        }
+      }
+      small {
+        color: var(--color-secondary);
+        width: 50%;
+        font-size: small;
+      }
+    }
+    .checkout-check {
+      border-bottom: 1px solid;
+      border-color: var(--border-default);
+      border-radius: 5px;
+      text-align: center;
+      padding: 0.3rem 0;
+      font-weight: 700;
+      a {
+        color: var(--color-primary);
+      }
+    }
+    .checkout-btn {
+      display: flex;
+      justify-content: center;
+    }
+  }
+}
