WG-276: Favorite button component

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -4,6 +4,7 @@
 @use './dark-primary-btn';
 @use './light-primary-btn';
 @use './buy-now-btn';
+@use './favorite-btn';
 
 @use './flagship-card';
 @use './top-collections-card';
