WG-253: collection and asset list

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -24,6 +24,9 @@
 @use './_collection-result-card';
 @use './_asset-result-card';
 @use './_paginator';
+@use './_favorite-collection-row';
+@use './_favorite-collection-list';
+@use './_favorites';
 
 @use './asset-detail-modal';
 
