WG-253 sync my nfts button

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -26,6 +26,7 @@
 @use './_paginator';
 @use './_favorite-collection-row';
 @use './_favorite-collection-list';
+@use './_profile';
 
 @use './asset-detail-modal';
 
