WG-253: fixed footer positioning issue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,6 +32,17 @@ body {
   background-color: var(--bg-app);
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: flex-start;
+}
+
+footer {
+  margin-top: auto;
+}
+
 /* Position and sizing of burger button */
 .bm-burger-button {
   position: fixed;
